[package]
name = "vmemory"
version = "0.1.1"
authors = ["Jason Johnson <jason@johnsonjason.dev>"]
edition = "2018"
description = "Read and write the memory in other processes for Windows and Unix-based systems regardless of memory page protections."
keywords = ["reverse-engineering", "debugging", "windows", "linux", "macOS"]
license = "MIT"
repository = "https://github.com/johnsonjason/vmemory"
homepage = "https://github.com/johnsonjason/vmemory"

[target.'cfg(target_os = "macos")'.dependencies]
mach = { version = "0.3.2" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.23.0" } 
object = { version = "0.27.1"}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi", "minwindef", "memoryapi", "fileapi", "winbase", "errhandlingapi", "tlhelp32"] }
ntapi = { version = "0.2" }
